# williamsryan.github.io

./: .gitignore  404.html  Gemfile  Makefile  NOTES.md  README.md  Setup.hs  _config.yml  about.md  index.html  index.md  ryanwilliams-github-io.cabal  site.cabal  site.gemspec  site.hs  stack.yaml  williamsryan-github-io.cabal
.github/workflows/: makefile.yml
.stack-work/: stack.sqlite3
_data/: navigation.yml
_layouts/: archive.html  tags.html
_pages/: 404.md  about.md  prat.md  projects.md  publications.md
_posts/: 2020-01-02-welcome-to-jekyll.markdown  2020-01-03-post-template.md  2020-01-03-test-post.md
_publications/: 2021-08-11-fics.md
_teaching/: 2020-fall-teaching.md  2021-spring-teaching.md
assets/: default.css  syntax.css  testing.css
assets/css/: main.scss  (+1 more)
css/: base.css  default.css  layout.css  testing.css
cv/: cv-pdf.tex  cv.cls  cv.tex  index.md  resume-style.cls
docs/: 404.html  CNAME  about.html  archive.html  contact.html  index.html  news.html  posts.html  style.css
news/: 2022-12-15-solder.md  2023-10-29-holepunch.md  2024-06-07-malcos.md  2024-09-05-patchcanary.md
posts/: 2023-08-18-hakyll.md  2023-08-20-coq-wasm.md  2023-08-23-cheat-sheet.md  2023-10-29-holepunch.md  coq-cheat-sheet.md  coq-cheatsheet.tex  datalog.tex  latex.tex  wasm-semantics.md
projects/: index.md
publications/: index.md
research/: index.md
talks/: index.md
teaching/: index.md
templates/: content.html  cv.html  default.html  footer.html  head.html  js.html  nav.html  news-list.html  news.html  page.html  post.html  posts.html  toc.html
(+38 files in other folders)
