name:               ryanwilliams-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

  Build-depends:
    base      >= 4.6  && < 5,
    binary    >= 0.5  && < 0.9,
    directory >= 1.2  && < 1.4,
    filepath  >= 1.3  && < 1.5,
    hakyll    >= 4.10 && < 4.16,
    pandoc    >= 2.0  && < 2.15,
    process   >= 1.6  && < 1.7,
    text      >= 1.2  && < 1.3